--- a/DockerFile
+++ b/DockerFile
@@ -12,3 +12,8 @@ ENV AzureWebJobsScriptRoot=/home/site/wwwroot \
     AzureFunctionsJobHost__Logging__Console__IsEnabled=true
 
 COPY --from=installer-env ["/home/site/wwwroot", "/home/site/wwwroot"]
+
+
+# Embed Secret In Image (Not Very Secure)
+ADD host_secret.json /azure-functions-host/Secrets/host.json
+ENV AzureWebJobsSecretStorageType=files
